<resources>
    <string name="app_name">DoubleClips</string>
    <string name="title">Title</string>
    <string name="welcome">Welcome!</string>
    <string name="add_project">Add new project!</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="processing">Processing</string>
    <string name="thank_you">Thank you!</string>
    <string name="close">Close</string>
    <string name="advanced">Advanced</string>
    <string name="log">Log</string>
    <string name="clips">Clips</string>
    <string name="motion_blur">Motion Blur</string>
    <string name="properties">Properties</string>
    <string name="keyframe">Keyframe</string>
    <string name="create">Create</string>


    <string name="attribution_audio_playback">Template media player</string>

    <string name="alert_add_new_project_title">Add/Import Project</string>

    <string name="alert_edit_project_title">Edit project title</string>
    <string name="alert_placeholder_edit_project">Project name…</string>
    <string name="alert_delete_project_confirmation_title">Delete project???</string>
    <string name="alert_delete_project_confirmation_description">Are you sure you want to delete this project?</string>


    <string name="alert_placeholder_edit_project_filename">Media name…</string>

    <string name="alert_delete_media_confirmation_title">Delete media???</string>
    <string name="alert_delete_media_confirmation_description">Are you sure you want to delete this media?</string>

    <string name="alert_processing_preview">Processing Preview…</string>
    <string name="alert_processing_without_preview_confirmation">Proceed without preview</string>

    <string name="alert_processing">Processing…</string>

    <string name="alert_processing_compression">Compressing…</string>

    <string name="alert_processing_decompression">Extracting…</string>

    <string name="alert_ask_for_showing_ads_title">Hey you, professional editor…</string>
    <string name="alert_ask_for_showing_ads_description">I know ads is frustrating, but in order to keep this app available, I…huhu,…have to add ads to survive in this world. Without money, I can\'t promote this app further to more people. I can\'t host my web because domain soon expire. Huhu. I need your help…</string>
    <string name="alert_ask_for_showing_ads_disable_guide">Tip! I don\'t like ads either, you can turn off this popup in Settings. I ain\'t mad at you 😚</string>

    <string name="btn_ask_for_showing_ads_reward">Show rewarded ads (More juicy money)</string>
    <string name="btn_ask_for_showing_ads_interstitial">I don\'t have time, show interstitial, skippable ads</string>
    <string name="btn_ask_for_showing_ads_decline">It\'s your problem. Go bankrupt I don\'t care</string>

    <string name="alert_thanks_for_showing_ads_title">💖 Thank you!</string>



    <string name="menu_cpn_edit_track_move_up">Move track up</string>
    <string name="menu_cpn_edit_track_move_down">Move track down</string>

    <string name="menu_cpn_project_element_edit">Edit title</string>
    <string name="menu_cpn_project_element_delete">Delete project</string>
    <string name="menu_cpn_project_element_share">Share project</string>
    <string name="menu_cpn_project_element_upload">Upload project</string>
    <string name="menu_cpn_project_element_clone">Clone project</string>

    <string name="menu_cpn_project_files_delete">Delete media</string>
    <string name="menu_cpn_project_files_edit">Edit filename</string>
    <string name="menu_cpn_project_files_swap">Swap media</string>

    <string name="menu_cpn_template_export_delete">Delete clip</string>
    <string name="menu_cpn_template_export_properties">Properties</string>

    <string name="add_project_choice_new">New</string>
    <string name="add_project_choice_import">Import</string>

    <string name="settings_group_general">General</string>
    <string name="settings_general_enable_dark_mode">Enable Dark Mode</string>
    <string name="settings_general_ads_popup">Ads popup</string>
    <string name="settings_general_early_access_issues_notification">Early access &amp; Issues Notification Popup</string>

    <string name="main_homepage">Home</string>
    <string name="main_template">Template</string>
    <string name="main_search">Search</string>
    <string name="main_storage">Storage</string>
    <string name="main_profile">Profile</string>
    <string name="main_settings">Settings</string>

    <string name="template_recommended">Recommended</string>
    <string name="settings_group_account">Account</string>
    <string name="settings_account_statistics">Statistics</string>
    <string name="settings_account_saved_templates">Saved Templates</string>
    <string name="settings_account_log_out">Log out</string>
    <string name="settings_account_sign_in">Sign in</string>
    <string name="login_title">Login</string>
    <string name="register_button">Register</string>
    <string name="login_username_email">Email/Username</string>
    <string name="login_password">Password</string>
    <string name="login_save_password">Remember me</string>
    <string name="login_button">Login</string>
    <string name="login_warning_untrusted_installation">Warning, Untrusted instance!</string>
    <string name="login_warning_untrusted_installation_general">Untrusted Instance of App</string>
    <string name="duration">Duration</string>
</resources>