<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <!-- Main Content Area with ViewPager -->
    <com.vanvatcorporation.doubleclips.impl.ViewPagerImpl
        android:id="@+id/mainViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/belowNavigationFrame" />

    <!-- Bottom Navigation Container -->
    <RelativeLayout
        android:id="@+id/belowNavigationFrame"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/spacing_sm"
        android:layout_marginEnd="@dimen/spacing_sm"
        android:layout_marginBottom="@dimen/spacing_base"
        android:background="@android:color/transparent"
        android:gravity="center">

        <!-- Navigation Background Card -->
        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardBackgroundColor="?attr/colorSurfaceContainer"
            app:cardCornerRadius="@dimen/corner_lg"
            app:cardElevation="@dimen/elevation_3"
            app:strokeColor="?attr/colorOutlineVariant"
            app:strokeWidth="1dp">

            <!-- Navigation Items Container -->
            <LinearLayout
                android:id="@+id/belowNavigationBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="@dimen/spacing_sm"
                android:paddingEnd="@dimen/spacing_sm">

                <!-- Home Navigation Item -->
                <com.vanvatcorporation.doubleclips.impl.NavigationIconLayout
                    android:id="@+id/navigationElement1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/spacing_xs"
                    android:layout_marginTop="@dimen/spacing_xs"
                    android:layout_marginEnd="@dimen/spacing_xs"
                    android:layout_weight="1"
                    app:navIcon="@drawable/baseline_home_24"
                    app:navText="@string/main_homepage" />

                <!-- Template Navigation Item -->
                <com.vanvatcorporation.doubleclips.impl.NavigationIconLayout
                    android:id="@+id/navigationElement2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/spacing_xs"
                    android:layout_marginTop="@dimen/spacing_xs"
                    android:layout_marginEnd="@dimen/spacing_xs"
                    android:layout_weight="1"
                    app:navIcon="@drawable/baseline_download_24"
                    app:navText="@string/main_template" />

                <!-- Search Navigation Item -->
                <com.vanvatcorporation.doubleclips.impl.NavigationIconLayout
                    android:id="@+id/navigationElement3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/spacing_xs"
                    android:layout_marginTop="@dimen/spacing_xs"
                    android:layout_marginEnd="@dimen/spacing_xs"
                    android:layout_weight="1"
                    app:navIcon="@drawable/baseline_search_24"
                    app:navText="@string/main_search" />

                <!-- Storage Navigation Item -->
                <com.vanvatcorporation.doubleclips.impl.NavigationIconLayout
                    android:id="@+id/navigationElement4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/spacing_xs"
                    android:layout_marginTop="@dimen/spacing_xs"
                    android:layout_marginEnd="@dimen/spacing_xs"
                    android:layout_weight="1"
                    app:navIcon="@drawable/baseline_history_24"
                    app:navText="@string/main_storage" />

                <!-- Profile Navigation Item -->
                <com.vanvatcorporation.doubleclips.impl.NavigationIconLayout
                    android:id="@+id/navigationElement5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/spacing_xs"
                    android:layout_marginTop="@dimen/spacing_xs"
                    android:layout_marginEnd="@dimen/spacing_xs"
                    android:layout_weight="1"
                    app:navIcon="@drawable/baseline_person_24"
                    app:navText="@string/main_profile" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</RelativeLayout>